Letra de la cancion con movimiento

--- a/ReproductorMP3/app/src/main/res/layout/activity_main.xml
+++ b/ReproductorMP3/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context="com.example.mariapizarro.reproductormp3.MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="132dp"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:id="@+id/letra"
+                android:layout_width="wrap_content"
+                android:layout_height="132dp"
+                android:gravity="center_horizontal"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+        </ScrollView>
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="132dp"
+            android:background="?attr/colorButtonNormal"
             android:orientation="vertical">
+
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/button3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/font_awesome_previous" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/font_awesome_play" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/font_awesome_next" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
